// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabMenu should render correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  min-height: 3rem;
  border-bottom: 0.125rem solid #EEF2F5;
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: space-between;
  -webkit-box-align: space-between;
  -ms-flex-align: space-between;
  align-items: space-between;
  width: 100%;
  min-height: 100%;
}

@media (max-width:48rem) {
  .c1 > .disabled {
    display: none;
  }
}

@media (min-width:48rem) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<TabMenu
  height="3rem"
  toggled={false}
  width="100%"
>
  <styled.div
    height="3rem"
    width="100%"
  >
    <div
      className="c0"
      height="3rem"
      width="100%"
    >
      <styled.div
        toggled={false}
      >
        <div
          className="c1"
        >
          MyTabMenu
        </div>
      </styled.div>
    </div>
  </styled.div>
</TabMenu>
`;

exports[`TabMenu should render correctly with height 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  min-height: 200px;
  border-bottom: 0.125rem solid #EEF2F5;
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: space-between;
  -webkit-box-align: space-between;
  -ms-flex-align: space-between;
  align-items: space-between;
  width: 100%;
  min-height: 100%;
}

@media (max-width:48rem) {
  .c1 > .disabled {
    display: none;
  }
}

@media (min-width:48rem) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<TabMenu
  height="200px"
  toggled={false}
  width="100%"
>
  <styled.div
    height="200px"
    width="100%"
  >
    <div
      className="c0"
      height="200px"
      width="100%"
    >
      <styled.div
        toggled={false}
      >
        <div
          className="c1"
        >
          MyTabMenu
        </div>
      </styled.div>
    </div>
  </styled.div>
</TabMenu>
`;

exports[`TabMenu should render correctly with toggled 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  min-height: 3rem;
  border-bottom: 0.125rem solid #EEF2F5;
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: space-between;
  -webkit-box-align: space-between;
  -ms-flex-align: space-between;
  align-items: space-between;
  width: 100%;
  min-height: 100%;
}

@media (max-width:48rem) {
  .c1 > .disabled {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:48rem) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<TabMenu
  height="3rem"
  toggled={true}
  width="100%"
>
  <styled.div
    height="3rem"
    width="100%"
  >
    <div
      className="c0"
      height="3rem"
      width="100%"
    >
      <styled.div
        toggled={true}
      >
        <div
          className="c1"
        >
          MyTabMenu
        </div>
      </styled.div>
    </div>
  </styled.div>
</TabMenu>
`;

exports[`TabMenu should render correctly with width 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 50%;
  min-height: 3rem;
  border-bottom: 0.125rem solid #EEF2F5;
  box-sizing: border-box;
}

.c1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: space-between;
  -webkit-box-align: space-between;
  -ms-flex-align: space-between;
  align-items: space-between;
  width: 100%;
  min-height: 100%;
}

@media (max-width:48rem) {
  .c1 > .disabled {
    display: none;
  }
}

@media (min-width:48rem) {
  .c1 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
  }
}

<TabMenu
  height="3rem"
  toggled={false}
  width="50%"
>
  <styled.div
    height="3rem"
    width="50%"
  >
    <div
      className="c0"
      height="3rem"
      width="50%"
    >
      <styled.div
        toggled={false}
      >
        <div
          className="c1"
        >
          MyTabMenu
        </div>
      </styled.div>
    </div>
  </styled.div>
</TabMenu>
`;
